Bug 442310 - inconsistent error messages depending on way used to try to create a symlink in unsupported filesystem
Summary: inconsistent error messages depending on way used to try to create a symlink ...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.86.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-11 16:37 UTC by Patrick Silva
Modified: 2021-10-21 12:15 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.88
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-09-11 16:37:49 UTC
SUMMARY
When I open a fat32 device with Dolphin and try to create a symlink via context menu of files view,
I see a dialog saying this:

Could not create symlink "/my/symlink". The destnation filesystem (FAT) does not support symlinks.

However, when I drag a file and drop it on a fat32 device in Places panel and choose "Link here"
from the context menu, Dolphin displays this inline error message:

Cannot transfer ‘file:///media/device/file’ because it is too large. The destination filesystem only supports files up to 4GiB

Operating System: Arch Linux
KDE Plasma Version: 5.22.5
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 2 Méven Car 2021-10-21 12:15:49 UTC
Git commit 8e87461c6368d446152e87b6a804e0359e171134 by Méven Car, on behalf of Ahmad Samir.
Committed on 21/10/2021 at 07:43.
Pushed by ahmadsamir into branch 'master'.

CopyJob: handle the no-op case of symlinks on FAT partitions

This copies some code from file_unix (see commit c27196acc33243db1da) to
CopyJob, since the latter is a more central place, we can catch more symlink
operations.

And as noted by dfaure in the MR, the code in file_unix is still needed for
the use case of apps using FileCopyJob directly and not CopyJob.

Split the msdos filesystem related code to a separate method, more readable
this way, I hope.
FIXED-IN: 5.88

M  +145  -53   src/core/copyjob.cpp
M  +6    -0    src/core/global.h
M  +3    -0    src/core/job_error.cpp

https://invent.kde.org/frameworks/kio/commit/8e87461c6368d446152e87b6a804e0359e171134